# ComponentTesterPico

hardware/v1/: README.md  panelisation.sh  pico-carrier-cache.lib  pico-carrier.kicad_pcb  pico-carrier.pro  pico-carrier.sch  pico-panel.kicad_pcb
hardware/v1/pico-carrier-gerber/: pico-panel-B_Cu.gbl  pico-panel-B_Mask.gbs  pico-panel-B_Paste.gbp  pico-panel-B_SilkS.gbo  pico-panel-Edge_Cuts.gm1  pico-panel-F_Cu.gtl  pico-panel-F_Mask.gts  pico-panel-F_Paste.gtp  pico-panel-F_SilkS.gto  pico-panel-NPTH.drl  pico-panel-PTH.drl
software/v1/: .gitignore  CMakeLists.txt  hello_usb.c  pio.md  readme.md
software/v1-bmp280-wifi/: CMakeLists.txt  bmp280_i2c.c  readme.md
